--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/flexslider.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto|Chewy|Anonymous+Pro|Merriweather|Indie+Flower|Muli' rel='stylesheet' type='text/css'>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.min.js"></script>
   <script src="plugins/jquery.nicescroll.min.js"></script>
   <link rel="stylesheet" href="css/selectordie.css" />
   <script src="plugins/selectordie.min.js"></script>
